# AITradingSystem

./: .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  IMPLEMENTATION_NOTES.md  README.md  pyproject.toml  requirements.md
config/: backtest_validation_policy.yaml  benchmark_policy.yaml  cache_catalog.yaml  catalyst_calendar.yaml  config_contract_registry.yaml  daily_shadow_weight_iteration_policy.yaml  data_quality.yaml  data_source_fallback_policy.yaml  data_source_request_budget_policy.yaml  data_sources.yaml  engineering_closeout_policy.yaml  execution_policy.yaml  feature_availability.yaml  features.yaml  feedback_sample_policy.yaml  fundamental_features.yaml  fundamental_metrics.yaml  heuristic_governance.yaml  ibkr_paper_controlled_fill.yaml  ibkr_paper_order.yaml  ibkr_paper_readonly.yaml  industry_chain.yaml  llm_request_profiles.yaml  market_regimes.yaml  metric_explainers.yaml  paper_signal_quality_policy.yaml  paperbroker_fill_model_calibration_policy.yaml  parameter_governance.yaml  portfolio.yaml  production_boundary_static_scan_allowlist.yaml  report_index_visibility_waivers.yaml  report_registry.yaml  risk_events.yaml  rule_cards.yaml  scenario_library.yaml  scheduled_tasks.yaml  scoring_rules.yaml  sec_companies.yaml  sec_pit_backfill.yaml  sec_pit_evaluation.yaml  (+12 more)
docs/: architecture.md  artifact_catalog.md  calculation_logic.md  data_source_subscription_inventory.md  development_plan.md  implementation_backlog.md  learning_path.md  market_calendar_freshness_policy.md  paper_shadow_protocol.md  platform_user_guide.md  refactor_log.md  (+6 more)
(+5006 files in other folders)
